--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
 .App {
   text-align: center;
 }
-
+html, body {
+  height: 100%
+}
 .title {
   margin-bottom: 30px;
+}
+
+.colorDiv{
+  color: white;
+  width: 100%;
+  height: 100%;
 }
